--- a/programa-geomorfologia.Rmd
+++ b/programa-geomorfologia.Rmd
@@ -16,23 +16,21 @@ knitr::opts_chunk$set(
 <!-- Este .md fue generado a partir del .Rmd homónimo. Edítese el .Rmd -->
 
 # Programa de "Geomorfología" <br/> Licenciatura en Geografía <br/> Universidad Autónoma de Santo Domingo (UASD)
-Febrero 2022 <br/>
+Agosto 2022 <br/>
 *José Ramón Martínez Batlle, el tali*
 
 
 ## Básicos:
 
+* Modalidad: presencial
+
 * Correo: jmartinez19@uasd.edu.do
 
-* Lugar y horario: Zoom, Lunes de 4 a 8 pm
+* Lugar y horario: FC-203, Lunes de 4 a 8 pm
 
 * [Programa (vínculo recursivo)](programa-geomorfologia.md)
 
-* [Guía para la redacción de tu manuscrito](guia-redaccion-manuscrito.md)
-
-## Recursos informáticos de la asignatura
-
-Sitúa apropiadamente los recursos de los que dispondrás en esta asignatura, los cuales describo [aquí](guia-redaccion-manuscrito.md#ecosistema).
+<!-- * [Guía para la redacción de tu manuscrito](guia-redaccion-manuscrito.md) -->
 
 ## Descripción
 
@@ -58,58 +56,53 @@ Aunque seguiré un guión de geomorfología de procesos, no olvidaré aproximaci
 
 La geomorfología de procesos no sería posible sin el avance de los últimos siglos en matemáticas. Igualmente, sin la irrupción de la tecnología y el desarrollo de la programación en la segunda mitad del siglo XX, tampoco sería posible estudiar procesos a escalas grandes. Estas herramientas han permitido que la geomorfología dé respuestas cada vez más precisas a problemas de ciencias de la Tierra, como los riesgos de desastres.
 
-Puedes presuponer que seguiré un esquema de geomorfología de procesos (to'eta plepla no e'de'barde) en la parte teórica, pero además introduciré geomorfometría, soporte matemático y aplicaciones tecnológicas usando software de código abierto, centrando el aprendizaje en asignaciones sobre geomorfometría y en un manuscrito que escribirás tú.
-
-__Me apoyaré en [R](https://www.r-project.org/) y en [GRASS GIS](https://grass.osgeo.org/)__ (las vainas del tali), y tienes la opción de usar Python, o quizá Julia, Javascript o cualquier otro lenguaje que sepas. Para visualizar salidas, opcionalmente podrás usar [__QGIS__](https://qgis.org/es/site/) (por ejemplo, en tu propia PC). Con suerte, y si alcanza el tiempo, verás posibles aplicaciones en geomorfología de la fotogrametría digital (e.g. [__OpenDroneMap__](https://www.opendronemap.org/)), de las técnicas de navegación por satélite para mediciones precisas, y de la teledetección, especialmente radar.
-
-En cuanto a escribir código, te adelanto que, para superar las dificultades y los desafíos inherentes de las asignaciones y el manuscrito, tendrás que:
-
-1. Contar con el profesor. No te abandonaré a tu suerte al analizar datos. No hay horario para pedirme ayuda, y pregunta lo que quieras preguntar, yo responderé cuando pueda. Intentaré darte soluciones cuando te tranques, pero con la condición de que, antes de preguntarme, intentes avanzar soluciones del problema. Lee los puntos 3 y 4 más abajo.
-
-2. Sufrir. Nadie dijo que fajarse con geomorfometría mediante R, GRASS GIS o Python fuese placentero. A diferencia de los software de pago, aquí no hay un botoncito mágico que lo resuelve todo. Cuesta esfuerzo, mucho; eso sí, es gratis, como todas las cosas buenas. Además, te obliga a la abstracción y a la resolución de problemas, algo que siempre viene bien en términos profesionales y académicos. Adelanto también que este mismo principio aplica a la redacción; escribir concisamente apoyándote en tus resultados es tarea complicada. Por lo tanto, sufre, pero con motivo.
-
-3. Pedir ayuda. Escríbeme o pide ayuda a tus compañeros y compañeras cuando te surjan dudas. Tienes varias alternativas:
-      a. Vía el foro de la asignatura (vía más eficiente y preferida).
-      b. A mi correo: jmartinez19\@uasd.edu.do
-      c. Creando *issues* en GitHub.
-
-4. Al hilo del punto anterior, utilizar estrategias proactivas para pedir ayuda. Elimina esta expresión de tu vocabulario: "da error". Con eso nadie podrá ayudarte. Lo importante es informar qué intentaste hacer y qué error o problema te surgió. Por ello, cuando pidas ayuda, deberás ofrecer un ejemplo reproducible. En la medida de lo posible, evita las capturas de pantalla y prefiere código reproducible + error. Si la captura de pantalla es el único camino que tienes para mostrar tu problema, entonces úsala, pero no olvides incluir los dos elementos primordiales: 1) qué intentaste hacer y 2) qué error/problema se te presentó. Otras estrategias son: consultar posibles soluciones a tu problema en foros ya existentes (como stackoverflow), probar alternativas, documentar lo que hiciste, explicar qué entiendes que pudo provocar el error. En definitiva, sólo pide ayuda cuando realmente te hayas "trancado".
-
-No tendrás que preocuparte por el hardware (ya me ensucio yo las manos con esa cosa tan mundana llamada computadora), pero sí ocúpate por escribir código con sentido, por razonar bien tus asignaciones y, especialmente, por escribir bien tu manuscrito; escribe que se te entienda, yo pediré a monesvol para que te ilumine. Dispondrás de un servidor de RStudio de modestas prestaciones administrado por "yo mesmamente", con los paquetes requeridos en el curso ya pre-instalados. Así podrás realizar tus asignaciones sobre geomorfometría y tu manuscrito sin preocuparte de instalaciones de software/paquetes. Queda a opción tuya hacer visualizaciones de datos y mapas usando software de interfaz gráfica (e.g. QGIS), pero necesitarás instalarlo en tu propia PC.
-
-Parecería "natural" utilizar interfaz gráfica de usuario para analizar datos geomorfológicos y hacer análisis geomorfométrico, pero a lo largo de esta asignatura verás que lo razonable es utilizar código. Realizar análisis reproducibles de manera eficiente sólo se logra escribiendo y ejecutando código. Igualmente, para visualizar patrones espaciales se requiere de herramientas versátiles, que tanto R como otros lenguajes proveen normalmente a través de paquetes. 
-
 ## Evaluación
 
 | Ítem | % de la \ nota final |
 |-|-:|
+| [Prácticas](#prácticas) | 40% |
 | [Manuscrito (basado en datos pre-existentes)](#manuscrito) | 50% |
-| [Presentación oral](#presentación-oral) | 20% |
-| [Asignaciones](#asignaciones) | 30% |
+| [Presentación oral](#presentación-oral) | 10% |
 
 Sí sí, lo que viste, no hay examen.
 
 Brevemente, cada ítem a evaluar consistirá en lo siguiente (más detalles por medio de asignaciones a lo largo del curso):
 
+### Prácticas
+
+Aplicaciones de las siguientes técnicas a la geomorfología:
+
+1. Sistemas de información geográfica (QGIS + GRASS GIS + R).
+
+2. GNSS (RTKLIB).
+
+3. Fotogrametría (OpenDroneMap + GRASS GIS).
+
+4. Teledetección (SNAP + QGIS).
+
+5. Machine learning (R + Python)
+
+Estas asignaciones te ayudarán a manejar herramientas (algunas reproducibles) en geomorfología. Necesitarás una PC en la cual deberás instalar los programas y lenguajes requeridos.
+
+Orientaré con ejemplos y soluciones de forma pública en las sesiones de clases. De esta forma, las discusiones quedarán disponibles para otras personas. Cuando necesites hacer consultas, debes plantear el problema al que te enfrentas, cómo has intentado resolverlo o qué soluciones has probado. Si se trata de alguna cuestión relacionada con programación o análisis de datos, deberás facilitar **código reproducible y mensaje de error (si lo hubiere)**. Cuando escribas tus dudas, no recurras al típico "da error", puesto que no conduce a nada. En su lugar prefiere estas expresiones *"intente este procedimiento ... , dio este error, luego intenté esta solución ... pero no consigo dar con el fallo"*.
+
 ### Manuscrito
 
-Tratará sobre una cuenca hidrográfica que te asignaré, con especial énfasis en morfometría, de manera que puedas combinar técnicas de geocomputación y geomorfometría digital.
+Tratará sobre un tema de geomorfología del contenido teórico (ver al final) que te resulte de interés. En general, trabajarás sobre procesos geomorfológicos en morfosistemas o elementos morfológicos específicos elegidos por ti. Algunos ejemplos concretos agrupados por temas:
 
-Alternativamente, tu manuscrito puede tratar sobre procesos geomorfológicos en morfosistemas o elementos morfológicos específicos elegidos por ti. Si eliges este camino, para la selección de tema, debe existir un interés puntual de tu parte. Hay muchas opciones, elige una (consulta al profesor, mira en libros y artículos de geomorfología):
+a. Geomorfología tectónica: deformación, ¿depósitos? (difíciles de conseguir), perfiles de ríos afectados.
+    
+b. Procesos fluviales (ríos y relacionados): evolución de canales, distribución de depósitos, inundaciones, abanicos aluviales, cuencas.
+    
+c. procesos de Vertientes: debris flows, deslizamientos, geometría de vertientes.
+    
+d. Procesos litorales: costas rocosas, costas no rocosas, evolución, depósitos. 
+    
+e. Procesos eólicas: depósitos, dunas, evolución.
+    
+f. Morfosistema kárstico: morfometría kárstica, procesos, depósitos, evolución.
 
-a. Geomorfología tectónica. Algunos ejemplos: deformación, ¿depósitos? (difíciles de conseguir), perfiles de ríos afectados.
-    
-b. Ríos. Evolución de canales, distribución de depósitos, inundaciones, abanicos aluviales, cuencas.
-    
-c. Vertientes. Debris flows, deslizamientos, geometría de vertientes.
-    
-d. Litorales. Costas rocosas, costas no rocosas, evolución, depósitos. 
-    
-e. Formas eólicas. Depósitos, dunas, evolución.
-    
-f. Karst. Morfometría kárstica, procesos, depósitos, evolución.
-
-Con independencia de si tu tema es cuencas hidrográficas, o uno elegido por ti libremente, elaborarás tu manuscrito siguiendo estas fases:
+Elaborarás tu manuscrito siguiendo estas fases:
 
 1. Formulación del problema/pregunta(s) de investigación, siendo preceptiva la sencillez de diseño. Las preguntas de investigación a responder las diseñarás tú. Consulta al profesor para construir tus preguntas en una sesión de clase, para que las preguntas formuladas sean "respondibles" sin caer en simplismos.
 
@@ -161,14 +154,6 @@ Para preparar tu manuscrito, sigue las normas para autores/as del [Anuario de In
 ### Presentación oral
 
 Dispondrás de 15 minutos para presentar oralmente tu trabajo al final del semestre. Valoraré el dominio que muestres del tema y de tus resultados.
-
-### Asignaciones
-
-Ocasionalmente, te enviaré asignaciones sobre geomorfometría, que te ayudarán a manejar herramientas reproducibles en geomorfología. Podrás realizar tus asignaciones  utilizando el servidor RStudio habilitado por mí (sólo necesitarás una PC con conexión a Internet y un navegador), o utilizando tu propia PC, pero en este último caso tendrás que instalar R, RStudio y los paquetes requeridos.
-
-Orientaré con ejemplos y soluciones de forma pública en las sesiones de clases y en el foro. De esta forma, las discusiones quedan disponibles para otras personas. Al hacer una consulta, debes plantear el problema al que te enfrentas, cómo has intentado resolverlo o qué soluciones has probado. Si se trata de alguna cuestión relacionada con programación o análisis de datos, deberás facilitar **código reproducible y mensaje de error (si lo hubiere)**. Cuando escribas tus dudas, no recurras al típico "da error", puesto que no conduce a nada. En su lugar prefiere estas expresiones *"intente este procedimiento ... , dio este error, luego intenté esta solución ... pero no consigo dar con el fallo"*.
-
-Prefiere el foro como medio de consulta, porque la discusión que se genere quedará accesible a las demás personas. Además, el foro te ofrece múltiples herramientas para formatear tu código, y ¡puedes subir capturas de pantalla con facilidad!
 
 ## Contenido teórico
 
