UPDATE readme ADD lab 1

--- a/ref/biblio.bib
+++ b/ref/biblio.bib
@@ -168,11 +168,12 @@
   publisher={Springer Science \& Business Media}
 }
 
-@book{olaya2014sistemas,
-  title={Sistemas de Informacion Geogr{\'a}fica},
-  author={Olaya, Víctor},
+@misc{olaya2020sistemas,
+  title={{Sistemas de Informaci{\'o}n Geogr{\'a}fica. Un libro libre de V{\'i}ctor Olaya}},
+  author={Olaya, V{\'i}ctor},
   url={https://volaya.github.io/libro-sig/},
-  year={2014}
+  note={Versi{\'o}n PDF: \url{https://github.com/volaya/libro-sig/releases/download/v3.0/Sistemas.de.Informacion.Geografica.pdf}},
+  year={2020}
 }
 
 @article{moran1948interpretation,
