UPDATE assignment 1 ADD manuscript assignments

--- a/practicas/practica-1.Rmd
+++ b/practicas/practica-1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introducción a software SIG de código abierto (QGIS + GRASS GIS + R + Python) aplicados a la cartografía geomorfológica."
+title: "Práctica 1. Introducción a software SIG de código abierto (QGIS + GRASS GIS + R + Python) aplicados a la cartografía geomorfológica."
 author: José Ramón Martínez Batlle
 date: 29-08-2022
 output: github_document
@@ -12,6 +12,10 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = T, cache=F)
 ```
+
+# Fecha de entrega
+
+- 9 de septiembre de 2022
 
 # Introducción
 
