UPDATE link manuscript assigment

--- a/practicas/practica-99-tu-manuscrito.Rmd
+++ b/practicas/practica-99-tu-manuscrito.Rmd
@@ -43,7 +43,7 @@ Cada parte tendrá sus criterios específicos detallados en las correspondientes
 
 4. Concisa extracción de conclusiones.
 
-Para preparar tu manuscrito, sigue las normas para autores/as del [Anuario de Investigaciones Científicas de la UASD](docs/instrucciones-para-autores-anuario-investigaciones-cientificas-UASD.pdf). Fungiré como editor ficticio de la revista, e incluso como revisor (*reviewer&nbsp;#2*).
+Para preparar tu manuscrito, sigue las normas para autores/as del [Anuario de Investigaciones Científicas de la UASD](../docs/instrucciones-para-autores-anuario-investigaciones-cientificas-UASD.pdf). Fungiré como editor ficticio de la revista, e incluso como revisor (*reviewer&nbsp;#2*).
 
 # Observaciones
 
