--- a/practicas/practica-99-tu-manuscrito-1-introduccion.Rmd
+++ b/practicas/practica-99-tu-manuscrito-1-introduccion.Rmd
@@ -47,7 +47,7 @@ Mi recomendación es que sigas este flujo:
   
   4. Discútelas conmigo. Elegiremos las idóneas.
   
-  5. Redacta tu introducción siguiendo el esquema de la [sección anterior](#que-contiene-una-introduccion)
+  5. Redacta tu introducción siguiendo el esquema de la [sección anterior](#qué-contiene-una-introducción)
 
 
 # Referencias
