UPDATE manuscript assigment 1 ADD Zotero example

--- a/practicas/practica-99-tu-manuscrito-1-introduccion.Rmd
+++ b/practicas/practica-99-tu-manuscrito-1-introduccion.Rmd
@@ -39,7 +39,7 @@ Mi recomendación es que sigas este flujo:
 
 3.  PASO CLAVE: **busca y revisa artículos disponibles sobre el tema** (busca en Google Scholar, por ejemplo), pero no te pierdas en el océano de fuentes que encontrarás. Usa palabras clave dirigidas, destacando tema, técnicas y área geográfica de estudio. Pregúntame y te dirijo oportunamente. A medida que leas fuentes, haz lo siguiente:
 
-    -   Lleva cuenta de los artículos revisados. Los usarás en tu introducción y los tendrás que referir apropiadamente. Usa alguna herramienta de apoyo para citas y lista de referencias, como Zotero (se instala tu PC como una app de escritorio), o las propias herramientas incorporadas en tu procesador de texto elegido (Zotero dispone de un addon para LibreOffice Writer y para Word). Recuerda que el estilo de cita requerido para el Anuario de Investigaciones Científicas de la UASD, es el archiconocido APA (por defecto, elegimos APA 7ma edición). [Este repo](https://github.com/citation-style-language/styles) incluye todos los estilos de cita en formato XML que te puedas imaginar; normalmente, herramientas como Zotero incluyen todos estos estilos con sólo hacer clic en una opción. Si eras usuario/a de Mendeley Desktop, [este anuncio](https://blog.mendeley.com/2022/02/22/introducing-mendeley-reference-manager-designed-for-todays-researcher-workflow/) te interesará; [aquí](https://twitter.com/MushtaqBilalPhD/status/1563437651646349314) una guía para migrar a Zotero. Si usas R+Rstudio para escribir tu manuscrito, consulta [esta guía](https://inbo.github.io/tutorials/tutorials/r_citations_markdown/) para configurar Zotero con tu documento RMarkdown.
+    -   Lleva cuenta de los artículos revisados. Los usarás en tu introducción y los tendrás que referir apropiadamente. Usa alguna herramienta de apoyo para citas y lista de referencias, como Zotero (se instala tu PC como una app de escritorio), o las propias herramientas incorporadas en tu procesador de texto elegido (Zotero dispone de un addon para LibreOffice Writer y para Word). Recuerda que el estilo de cita requerido para el Anuario de Investigaciones Científicas de la UASD, es el archiconocido APA (por defecto, elegimos APA 6ta o 7ma edición). [Este repo](https://github.com/citation-style-language/styles) incluye todos los estilos de cita en formato XML que te puedas imaginar; normalmente, herramientas como Zotero incluyen todos estos estilos con sólo hacer clic en una opción. Si eras usuario/a de Mendeley Desktop, [este anuncio](https://blog.mendeley.com/2022/02/22/introducing-mendeley-reference-manager-designed-for-todays-researcher-workflow/) te interesará; [aquí](https://twitter.com/MushtaqBilalPhD/status/1563437651646349314) una guía para migrar a Zotero. Si usas R+Rstudio para escribir tu manuscrito, consulta [esta guía](https://inbo.github.io/tutorials/tutorials/r_citations_markdown/) para configurar Zotero con tu documento RMarkdown.
     -   En cada artículo, concéntrate en el resumen y, si acaso, lee la última parte de la introducción. De manera global, cuando hayas revisado varios trabajos, identifica los problemas no resueltos que se destacan en las más recientes publicaciones. Los vacíos de investigación son muy importantes, porque tú precisamente te concentrarás en esos vacíos.
 
 4.  PASO CLAVE: **redacta varias preguntas de investigación candidatas y revisita las fuentes que consultaste, ampliando en caso necesario**. Pregúntame y te dirijo. Amplío dos detalles relevantes:
