--- a/programa-geomorfologia.Rmd
+++ b/programa-geomorfologia.Rmd
@@ -90,9 +90,11 @@ Orientaré con ejemplos y soluciones de forma pública en las sesiones de clases
 
 ### Manuscrito
 
-Tratará sobre un tema de geomorfología del contenido teórico (ver al final) que te resulte de interés. En general, trabajarás sobre procesos geomorfológicos en morfosistemas o elementos morfológicos específicos elegidos por ti. Algunos ejemplos concretos agrupados por temas:
+Tratará sobre un tema de geomorfología del contenido teórico (ver al final) que te resulte de interés. En general, trabajarás sobre procesos geomorfológicos en morfosistemas o elementos morfológicos específicos elegidos por ti.
 
 #### Temas sugeridos
+
+Algunos ejemplos concretos agrupados por temas:
 
 a. Geomorfología tectónica: deformación, ¿depósitos? (difíciles de conseguir), perfiles de ríos afectados.
     
