--- a/practicas/practica-1.Rmd
+++ b/practicas/practica-1.Rmd
@@ -180,33 +180,34 @@ kable(d[, c("Nombre completo", 'e1')])
 
 5. Pregunta, reflexión. ¿Qué fortalezas entiendes que tiene R+RStudio?
 
-### 1D. Instala y prueba Python, Pip, entornos virtuales y Jupyter Notebooks
+### 1D. Instala y prueba Python mediante Conda
 
 > Capas asignadas: las mismas que en 1A. Tal como indiqué arriba, no olvides incluir el código que emplees en las respuestas.
 
-1. Instala Python 3, Pip, entornos virtuales (paquete `virtualenv`) y Jupyter Notebooks. "Python 3" se refiere al lenguaje como tal, Pip es el sistema de gestión de paquetes escritos en Python, y Jupyter Notebooks es un entorno interactivo basado en la web para crear documentos de Jupyter. [Este](https://phoenixnap.com/kb/how-to-install-python-3-windows) tutorial te ayudará a instala Python 3, Pip y `virtualenv` (en el asistente de instalación, asegúrate de marcar la casilla `Add Python 3.# to PATH`). [Este vídeo](https://www.youtube.com/watch?v=AuTkAWEa06E), del minuto 4:18 al 4:47, muestra cómo instalar Jupyter Notebooks.
+1. En Windows, Conda ofrece la alternativa idónea para instalar Python3 con un único instalador. Recomiendo Miniconda, que ocupa poco espacio y garanntiza que las dependencias se satisfagan. Al finalizar, instala los paquetes requeridos para esta práctica (si usas Linux, sigue los pasos descritos en [este script](crear_activar_entorno_virtual.sh)). El proceso seguirá los siguientes pasos:
 
-> Como alternativa a lo anterior, puedes instalar Anaconda, una distribución completa de Python y R que facilita el cumplimiento de dependencias y la instalación de paquetes (por ejemplo, los paquetes de ciencia de datos y los espaciales son fáciles de instalar), pero como desventaja tiene que ocupa más espacio en disco que la instalación de las aplicaciones por separado. Si eliges Anaconda, [este vídeo](https://www.youtube.com/watch?v=FTkUcSicRIA) podría servirte.
+  - Instala Miniconda, visita la [web de Conda](https://docs.conda.io/en/latest/) y localiza el instalador. En septiembre de 2022, la página de descargas de distintas versiones de Python3 y arquitecturas, se encuentra [aquí](https://docs.conda.io/en/latest/miniconda.html) y [este es el link de descarga](https://repo.anaconda.com/miniconda/Miniconda3-py39_4.12.0-Windows-x86_64.exe) del instalador de Miniconda-Python3 para Windows más reciente. Instala sólo para ti (`Just for me`), y no olvides marcar la opción `Add to path`
+
+  - Abre una ventana de CMD, escribiendo en la barra de búsquedas `CMD` o `Command Prompt`. Esta se abrirá en `C:\Users\NOMBREDEUSUARIO`, donde `NOMBREDEUSUARIO` es un comodín que significa "tu nombre de usuario.
+
+  - Si todo va bien, instala `geopandas` y `geoplot`, básicamente ejecuta estas sentencias en el Prompt de Miniconda: `conda install geopandas` y `conda install geoplot`.
+  
+  - Instala Jupyter desde el Prompt: `conda install jupyter`.
+  
+  - Si todo va bien, prueba que funciona, escribiendo en el CMD `jupyter notebook` . Esto abrirá una ventana del navegador en la ruta `http://localhost:8888`; si no se abre automáticamente, navega a esa dirección.
+
+> Como alternativa a lo anterior, puedes instalar Anaconda, una distribución más completa de Conda que ofrece Python y R que facilita el cumplimiento de dependencias y la instalación de paquetes (por ejemplo, los paquetes de ciencia de datos y los espaciales son fáciles de instalar), pero como desventaja tiene que ocupa más espacio en disco que la instalación de las aplicaciones por separado. Si eliges Anaconda, [este vídeo](https://www.youtube.com/watch?v=FTkUcSicRIA) podría servirte.
 
 > Una última alternativa: usa Google Colab; si tienes cuenta en Google, bastaría con activar dicho servicio, pero tiene como desventaja que tendrías que subir los archivos que necesites en tu procesamiento.
 
-<!-- 2. Instala un editor de código. Si no tienes uno, te recomiendo que investigues sobre los siguientes y elijas uno: Atom (se anunció su fin recientemente), Visual Studio Code, Sublime Text, PyCharm, Spyder. El más popular actualmente es Visual Studio Code que, aunque no es de código abierto, ofrece múltiples herramientas. -->
+2. Localiza tu capa asignada en GitHub y descárgala. Asegúrate de saber dónde la guardaste y con qué nombre. Deberías poderla localizar en el servidor Jupyter.
 
-<!-- 3. (Opcional) Si tu sistema operativo es Windows, instala una consola para administrar tu máquina sin interfaz gráfica. Windows viene con una de serie, el CMD, pero también puedes evaluar Power Shell o Cmder; esta última tiene la ventaja de que puedes usar comandos UNIX de manera natural. -->
+3. Localiza y descarga [este](mapa_de_mi_capa.ipynb) cuaderno de Jupyter, adaptándolo a tu capa asignada (la ruta deberás escribirla dentro de la función de lectura `gpd.read_file('')`, por ejemplo `gpd.read_file('Downloads/TUCAPA.gpkg')`. IMPORTANTE: Windows probablemente le cambie la extensión al cuaderno de Jupyter (por ejemplo, quizá le añada una extensión `.txt`); si lo llegase a hacer, haz visibles las extensiones de archivo y asegúrate que de que el cuaderno tiene la extensión `.ipynb`. Localiza el cuaderno desde Jupyter y ábrelo. Limpia las salidas mediante el menú `Cell>All Output>Clear`
 
-2. Crea y activa un entorno virtual. [Este vídeo hasta el minuto 3:08](https://www.youtube.com/watch?v=jY2g1erTTZI) te explica qué es un entorno virtual y te enseña cómo instalarlo y activarlo en Windows. Quizá ya tiene instalado el paquete `virtualenv` y sólo necesitas activa el entorno virtual. IMPORTANTE: activa tu entorno virtual en la carpeta de tu proyecto de trabajo, por ejemplo, aquella donde tienes los datos de la práctica. Si usas Linux, [este script](crear_activar_entorno_virtual.sh) te resultará útil para crear tu entorno virtual.
+4. Captura la pantalla y pégala en tu informe.
 
-3. Instala los paquetes `geopandas` y `geoplot`. Instálalos una vez tengas tu entorno virtual activo.
+5. Describe lo que has realizado. Obviando los pasos de instalación, creación y activación de entorno virtual e instalación de paquetes, resume los pasos necesarios para representar tu capa asignada (remítete a los pasos dados en el cuaderno de Jupyter).
 
-4. Activa Jupyter Notebooks, ejecutando la sentencia `jupyter notebook` desde la consola localizada en tu carpeta de la práctica. Probablemente se abra el navegador mostrando el cuaderno de Jupyter. En caso contrario, dirígete a la ruta [http://localhost:8888/](http://localhost:8888/) y crea un cuaderno Jupyter mediante el botón `New`>`Python 3 (ipykernel)`. Aprende cómo crear y ejecutar tus sentencias de Python en este cuaderno. [Esta intro básica](https://www.youtube.com/watch?v=Xsrr15_c7JY) te podría ayudar y [este otro vídeo](https://www.youtube.com/watch?v=6Vr9ZUntCyE) profundiza un poco más.
-
-5. Carga la capa vectorial asignada con `geopandas` y represéntala con `plot` y `geoplot`. Guíate de [este](mapa_de_mi_capa.ipynb) cuaderno de Jupyter, adaptándolo a tu capa asignada.
-
-6. Captura la pantalla y pégala en tu informe.
-
-7. Describe lo que has realizado. Obviando los pasos de instalación, creación y activación de entorno virtual e instalación de paquetes, resume los pasos necesarios para representar tu capa asignada (remítete a los pasos dados en el cuaderno de Jupyter).
-
-8. Reflexiona. ¿Qué fortalezas entiendes que tiene Python?
-
+6. Reflexiona. ¿Qué fortalezas entiendes que tiene Python?
 
 # Referencias
